--- a/event.html
+++ b/event.html
@@ -4,46 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upnext - Event Details</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Desktop sidebar navigation -->
-    <aside class="sidebar" id="sidebar">
-        <div class="sidebar-header">
-            <h1 class="logo">Upnext</h1>
-            <button id="sidebar-toggle" aria-label="Toggle sidebar">
+    <div class="new-sidebar" id="new-sidebar">
+        <div class="new-sidebar-header">
+            <div class="new-logo-container">
+                <img src="/logo.png" alt="Hackathon Logo" class="new-logo-img">
+            </div>
+            <button class="new-toggle-btn" id="new-toggleBtn">
                 <i class="fas fa-chevron-left"></i>
             </button>
         </div>
-        <nav class="sidebar-nav">
-            <a href="index.html" class="nav-item" data-route="home">
-                <i class="fas fa-home"></i>
-                <span>Home</span>
-            </a>
-            <a href="events.html" class="nav-item active" data-route="events">
-                <i class="fas fa-calendar-alt"></i>
-                <span>Events</span>
-            </a>
-            <a href="profile.html" class="nav-item" data-route="profile">
-                <i class="fas fa-user"></i>
-                <span>Profile</span>
-            </a>
-        </nav>
-    </aside>
-
+        
+        <ul class="new-nav-list">
+            <li class="new-nav-item" id="home-nav-item">
+                <a href="/index.html" class="new-nav-link" data-route="home">
+                    <span class="new-nav-icon">
+                        <i class="fas fa-home"></i>
+                    </span>
+                    <span class="new-nav-text">Home</span>
+                </a>
+            </li>
+            <li class="new-nav-item" id="events-nav-item">
+                <a href="/events.html" class="new-nav-link" data-route="events">
+                    <span class="new-nav-icon">
+                        <i class="fas fa-calendar-alt"></i>
+                    </span>
+                    <span class="new-nav-text">Events</span>
+                </a>
+            </li>
+            <li class="new-nav-item" id="profile-nav-item">
+                <a href="/profile.html" class="new-nav-link" data-route="profile">
+                    <span class="new-nav-icon">
+                        <i class="fas fa-user"></i>
+                    </span>
+                    <span class="new-nav-text">Profile</span>
+                </a>
+            </li>
+        </ul>
+    </div>
     <!-- Mobile bottom navigation -->
     <nav class="bottom-nav" id="bottom-nav">
-        <a href="events.html" class="nav-item active" data-route="events">
+        <a href="/events.html" class="nav-item active" data-route="events">
             <i class="fas fa-calendar-alt"></i>
             <span>Events</span>
         </a>
-        <a href="index.html" class="nav-item" data-route="home">
+        <a href="/index.html" class="nav-item" data-route="home">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="profile.html" class="nav-item" data-route="profile">
+        <a href="/profile.html" class="nav-item" data-route="profile">
             <i class="fas fa-user"></i>
             <span>Profile</span>
         </a>
@@ -55,8 +68,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="data.js"></script>
-    <script src="utils.js"></script>
-    <script src="event.js"></script>
+    <script src="/data.js"></script>
+    <script src="/utils.js"></script>
+    <script src="/event.js"></script>
 </body>
 </html>
