--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upnext - Stay In Sync With Your School</title>
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -69,6 +70,10 @@
       <div class="logo-container">
         <img src="/logo.png" alt="UpNextLogo" class="upnextlogo" />
       </div>
+      <div class="schoolname">
+        <div class="schoolnamebig">Showing events for</div>
+        <div class="schoolnamesmall">Don Bosco School, Park Circus</div>
+      </div>
       <div class="search-bar">
         <i class="fas fa-search"></i>
         <input
@@ -78,10 +83,7 @@
           aria-label="Search events"
         />
       </div>
-      <div class="schoolname">
-        <div class="schoolnamebig">Showing events for</div>
-        <div class="schoolnamesmall">Don Bosco School, Park Circus</div>
-      </div>
+      
 
       <div class="home-card-container">
         <h2 class="section-title">Featured Events</h2>
