--- a/forgot-password.html
+++ b/forgot-password.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upnext - Forgot Password</title>
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" >
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -110,7 +112,7 @@
         <p>Enter your email to receive a password reset link.</p>
       </div>
       <form id="forgot-password-form">
-        <div class="form-group">
+        <div class="form-group"style="display: block;">
           <label for="email">Email</label>
           <div class="input-icon">
             <i class="fas fa-envelope"></i>
