--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upnext - Login</title>
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" >
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -89,10 +91,10 @@
     <div class="login-container">
       <div class="login-header">
         <img src="/logo.png" alt="Upnext Logo" />
-        <h1>Welcome back!</h1>
+        <h1>Welcome!</h1>
       </div>
       <form id="login-form">
-        <div class="form-group">
+        <div class="form-group" style="display: block;">
           <label for="email">Email</label>
           <div class="input-icon">
             <i class="fas fa-envelope"></i>
@@ -106,7 +108,7 @@
             />
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" style="display: block;">
           <label for="password">Password</label>
           <div class="input-icon">
             <i class="fas fa-lock"></i>
@@ -142,7 +144,7 @@
         const password = document.getElementById('password').value;
         console.log('Login attempted with:', { email, password });
         // Redirect to profile or home page on successful login
-        window.location.href = '/profile.html';
+        window.location.href = '/index.html';
       });
     </script>
   </body>
