--- a/profile.html
+++ b/profile.html
@@ -96,7 +96,7 @@
         </div>
         <div class="profile-header">
           <img
-            src="https://placehold.co/600x600?text=A"
+            src="/assets/profilepic.png"
             alt=""
             class="profile-image"
           />
