--- a/profile.html
+++ b/profile.html
@@ -103,7 +103,7 @@
         </div>
         <div class="profile-header-text">Abhinav Xavier Kujur</div>
         <div class="profile-header-h2">Class 12</div>
-        <div class="profile-header-h3">Don Bosco School, Park Circus</div>
+        <div class="profile-header-h3">Don Bosco Global School</div>
       </div>
       <div class="profile-container">
         <!-- <div class="profile-section">
