--- a/signup.html
+++ b/signup.html
@@ -140,7 +140,7 @@
               <option value="La Martiniere for Boys">La Martiniere for Boys</option>
               <option value="La Martiniere for Girls">La Martiniere for Girls</option>
               <option value="Modern High School for Girls">Modern High School for Girls</option>
-              <option value="Don Bosco School, Park Circus">Don Bosco School, Park Circus</option>
+              <option value="Don Bosco Global School">Don Bosco Global School</option>
               <option value="St. James' School">St. James' School</option>
               <option value="The Heritage School, Kolkata">The Heritage School, Kolkata</option>
               <option value="Sri Sri Academy">Sri Sri Academy</option>
