--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="schoolname">
         <div class="schoolnamebig">Showing events for</div>
-        <div class="schoolnamesmall">Don Bosco School, Park Circus</div>
+        <div class="schoolnamesmall">Don Bosco Global School</div>
       </div>
       <div class="search-bar">
         <i class="fas fa-search"></i>
